--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,16 +47,22 @@
         width: 25%;
         height: 50%; }
 
+.dev-cart {
+  margin-bottom: 25px;
+  font-family: 'Lobster', sans-serif;
+  font-size: 43px; }
+
 .cart-title {
   width: 100%;
   height: 100px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: nowrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  padding-left: 162px;
   align-content: center;
-  font-size: 25px;
+  font-size: 40px;
   letter-spacing: 3px; }
 
 .cart-container {
@@ -256,7 +262,10 @@ button.stripe {
   height: 25%;
   border: none;
   background-color: white;
-  font-size: 16px; }
+  font-size: 18px;
+  display: flex;
+  align-content: flex-start;
+  margin: 20px; }
 
 .back-link {
   text-decoration: none;
