--- a/src/styles/component/_HomePage.scss
+++ b/src/styles/component/_HomePage.scss
@@ -10,14 +10,24 @@ body {
 
 .HomePage-container {
   width: 100%;
-  height: 100vh;
-//   background: url('https://i.imgur.com/gmaqcSX.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  height: 100%;
   position:absolute;
+  top: 0;
+  bottom: 0;
+  overflow: hidden;
 }
+
+video{
+ min-width: 100%; 
+ min-height: 100%; 
+ width: auto;
+ height: auto;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+}
+
 .HomePage-img {
     width: 100%;
     height: 100%;
@@ -119,4 +129,20 @@ float: right;
 a.log{
     color: rgba(255, 255, 255, 0.514);
     text-decoration: none;
+}
+
+option {
+    background-color: red;
+}
+
+.home-input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-weight: lighter;
+    padding-left: 20px;
+}
+
+.home-input:hover {
+    background-color: rgba(255, 255, 255, 0.171);
 }
