--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -349,12 +349,21 @@ body {
 
 .HomePage-container {
   width: 100%;
-  height: 100vh;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  position: absolute; }
+  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  overflow: hidden; }
+
+video {
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
 
 .HomePage-img {
   width: 100%;
@@ -455,6 +464,19 @@ body {
 a.log {
   color: rgba(255, 255, 255, 0.514);
   text-decoration: none; }
+
+option {
+  background-color: red; }
+
+.home-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  font-weight: lighter;
+  padding-left: 20px; }
+
+.home-input:hover {
+  background-color: rgba(255, 255, 255, 0.171); }
 
 .Wrap-Menu {
   display: grid;
@@ -603,8 +625,7 @@ a.log {
   height: 80%; }
 
 .top {
-  font-size: 42px;
-  height: 20%; }
+  font-size: 42px; }
 
 .dev {
   font-family: 'Lobster', sans-serif;
